# SNABSuite

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  INSTALL.sh  README.md  annotated.html  classes.html  dir_1dc3a9d3d28b0cd214b46e102cb088f6.html  dir_30087b5439e04c85304dbcf15650710b.html  dir_571e06d679552df0ac1670264ca20086.html  dir_81bd624607050f7d988557192e5fcf55.html  dir_8582b18c2ad265b5476d3875ec33e98f.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_f06a87340611c2e8d66dc0bcae1b0476.html  doxygen.conf  files.html  functions.html  functions_0x7e.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func_0x7e.html  functions_func_a.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_i.html  functions_func_l.html  functions_func_m.html  functions_func_o.html  functions_func_p.html  functions_func_r.html  (+77 more)
cmake/: binam_external.cmake  cypress_external.cmake  eigen_external.cmake  gtest_external.cmake  slam_external.cmake  sudoku_external.cmake
config/: BiNAM.json  BiNAM_burst.json  BiNAM_pop.json  BiNAM_pop_burst.json  FunctionApproximation.json  GroupMaxFreqToGroup.json  GroupMaxFreqToGroupAllToAll.json  GroupMaxFreqToGroupProb.json  InTheLoopTrain.json  InTheLoopTrain2.json  LateralInhibWTA.json  MaxInputAllToAll.json  MaxInputFixedInConnector.json  MaxInputFixedOutConnector.json  MaxInputOneToOne.json  MirrorInhibWTA.json  MirrorInhibWTASmall.json  MnistCNNPool.json  MnistDiehl.json  MnistDiehlTTFS.json  MnistDoubleCNN.json  MnistITL.json  MnistITLLastLayer.json  MnistITLTTFS.json  MnistNAS129.json  MnistNAS63.json  MnistNAStop.json  MnistSpikey.json  MnistSpikeyTTFS.json  OutputFrequencyMultipleNeurons.json  OutputFrequencySingleNeuron.json  OutputFrequencySingleNeuron2.json  RateBasedWeightDependentActivation.json  RefractoryPeriod.json  ReluSimilarity.json  SetupTimeAllToAll.json  SetupTimeOneToOne.json  SetupTimeRandom.json  SimpleMnist.json  SimpleWTA.json  (+8 more)
config_energy/: genn_energy.json  genn_energy_laptop.json  genn_gpu_energy.json  spikey_energy.json  spinnaker_energy.json  spinnaker_energy_spinn5.json
d0/d69/: class_s_n_a_b_1_1_max_input_one_to_one.html
d0/d83/: class_s_n_a_b_1_1_m_n_i_s_t___b_a_s_e.html
d0/da6/: namespacemnist__dnn.html
d0/dd1/: class_s_n_a_b_1_1_mirror_inhib_w_t_a-members.html
d0/ddf/: class_s_n_a_b_1_1_mnist_spikey-members.html
d0/dfd/: max__input_8hpp.html  max__input_8hpp_source.html
d1/d42/: class_s_n_a_b_1_1_group_max_freq_to_group-members.html
d1/d44/: class_s_n_a_b_1_1_s_n_a_b_base-members.html
d1/d50/: class_s_n_a_b_1_1_mnist_n_a_s129.html
d1/d75/: class_m_n_i_s_t_1_1_no_constraint-members.html
d1/dbf/: class_s_n_a_b_1_1_utilities.html
d1/dc6/: class_s_n_a_b_1_1_benchmark_exec-members.html
d1/dcc/: class_m_n_i_s_t_1_1_re_l_u.html
d1/dd5/: class_s_n_a_b_1_1_max_input_one_to_one-members.html
d2/d03/: class_s_n_a_b_1_1_mnist_spikey.html
d2/d36/: autoformat__json_8py.html  autoformat__json_8py_source.html
d2/d4f/: namespacemnist__double__cnn.html
d2/d60/: class_s_n_a_b_1_1_mnist_i_t_l-members.html
d2/d61/: class_m_n_i_s_t_1_1_positive_weights-members.html
d2/d62/: namespaceshow__csv.html
d2/d73/: mnist__dnn_8py.html  mnist__dnn_8py_source.html
d2/d98/: namespacemnist__cnn__pool.html
d2/da3/: namespace1dim__plot.html
d2/db1/: histogram_8py.html  histogram_8py_source.html
d2/dc1/: read__json_8hpp.html  read__json_8hpp_source.html
d2/dde/: classconvert__weights_1_1_weight_clip.html
d2/df3/: plot__membrane__pot_8py.html  plot__membrane__pot_8py_source.html
d2/dfe/: classconvert__weights_1_1_weight_clip-members.html
d3/d23/: class_s_n_a_b_1_1_mnist_n_a_s63-members.html
d3/d47/: mnist__dnn__spikey_8py.html  mnist__dnn__spikey_8py_source.html
d3/da8/: class_s_n_a_b_1_1_refractory_period.html
d3/dbc/: generate__bench__json_8py.html  generate__bench__json_8py_source.html
plot/: 1dim_plot.py  2dim_plot.py  dim_labels.py  generate_tex.py  histogram.py  matplotlibrc  plot_map.py  plot_membrane_pot.py  spike_plot.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+81 more)
source/: snabsuite.hpp
sweeps/: BiNAM.json  BiNAM_burst.json  BiNAM_pop.json  BiNAM_pop_burst.json  BiNAM_rec_samples.json  FunctionApprox_weights.json  GroupMaxFreqToGroupAllToAll_#neurons.json  GroupMaxFreqToGroupAllToAll_#neurons2.json  GroupMaxFreqToGroupAllToAll_weight.json  GroupMaxFreqToGroupProb.json  GroupMaxFreqToGroup_#neurons.json  GroupMaxFreqToGroup_weight.json  LateralInhibWTA.json  MaxInputAllToAll_#input_neurons.json  MaxInputAllToAll_#neurons.json  MaxInputAllToAll_#spikes.json  MaxInputFixedOutConnector_#connections.json  MaxInputFixedOutConnector_#input_neurons.json  MaxInputFixedOutConnector_#neurons.json  MaxInputOneToOne.json  MaxInputOneToOne_#neurons.json  MaxInputOneToOne_#spikes.json  MirrorInhibWTA.json  MirrorInhibWTAsmall.json  MnistCNNPool.json  MnistDiehlTTFS_weight.json  MnistDoubleCNN.json  MnistITL_duration.json  MnistITL_freq.json  MnistITL_lr.json  MnistSpikeyTTFS.json  Mnist_cnn.json  Mnist_cnn_pool.json  OutputFrequencyMultipleNeuron.json  OutputFrequencySingleNeuron.json  OutputFrequencySingleNeuron2.json  RateBasedWeightDependentActivation.json  RefractoryPeriod.json  RefractoryPeriod_weight.json  ReluSimilarity.json  (+17 more)
test/: CMakeLists.txt
test/SNABs/: test_WTA_like.cpp  test_mnist.cpp
test/common/: test_neuron_parameters.cpp  test_parameter_sweep.cpp
test/util/: test_read_json.cpp  test_spiking_utils.cpp  test_utilities.cpp
(+208 files in other folders)
